<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="70dp">

        <TextView
            android:id="@+id/textViewTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_page"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLoginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="68dp"
            android:text="@string/login"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleLabel" />

        <EditText
            android:id="@+id/editTextLoginInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="@+id/textViewLoginLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLoginLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewLoginLabel" />

        <TextView
            android:id="@+id/textViewPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textViewLoginLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewLoginLabel" />

        <EditText
            android:id="@+id/editTextPasswordInput6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_6_8_characters"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="@+id/textViewPasswordLabel"
            app:layout_constraintEnd_toEndOf="@+id/editTextLoginInput"
            app:layout_constraintStart_toEndOf="@+id/textViewPasswordLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewPasswordLabel" />

        <TextView
            android:id="@+id/textViewPasswordLabel7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewPasswordLabel"
            app:layout_constraintStart_toStartOf="@+id/textViewPasswordLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewPasswordLabel" />

        <EditText
            android:id="@+id/editTextPasswordInput7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_6_8_characters"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="@+id/textViewPasswordLabel7"
            app:layout_constraintEnd_toEndOf="@+id/editTextPasswordInput6"
            app:layout_constraintStart_toStartOf="@+id/editTextPasswordInput6"
            app:layout_constraintTop_toTopOf="@+id/textViewPasswordLabel7" />

        <TextView
            android:id="@+id/textViewPasswordLabel8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewPasswordLabel7"
            app:layout_constraintStart_toStartOf="@+id/textViewPasswordLabel7" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordInput7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>